CRICKSTATS/force-app/main/default/objects/Match_Performance__c/Match_Performance__c.object-meta.xml
<CustomObject>
<description>One player's performance in one match. Child of Player (master-detail).</description>
<label>Match Performance</label>
<nameField><label>Match Performance Name</label><trackHistory>false</trackHistory><type>Text</type></nameField>
<pluralLabel>Match Performances</pluralLabel>
<sharingModel>ControlledByParent</sharingModel>
</CustomObject>