CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Balls_Faced__c.field-meta.xml
<CustomField>
<fullName>Balls_Faced__c</fullName>
<label>Balls Faced</label>
<defaultValue>0</defaultValue>
<precision>18</precision>
<scale>0</scale>
<type>Number</type>
</CustomField>