CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Catches__c.field-meta.xml
<CustomField>
<fullName>Catches__c</fullName>
<label>Catches</label>
<defaultValue>0</defaultValue>
<precision>18</precision>
<scale>0</scale>
<type>Number</type>
</CustomField>