CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Fours__c.field-meta.xml
<CustomField>
<fullName>Fours__c</fullName>
<label>Fours</label>
<defaultValue>0</defaultValue>
<precision>18</precision>
<scale>0</scale>
<type>Number</type>
</CustomField>