CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Maiden_Overs__c.field-meta.xml
<CustomField>
<fullName>Maiden_Overs__c</fullName>
<label>Maiden Overs</label>
<defaultValue>0</defaultValue>
<precision>18</precision>
<scale>0</scale>
<type>Number</type>
</CustomField>