CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Match_Result__c.field-meta.xml
<CustomField>
<fullName>Match_Result__c</fullName>
<label>Match Result</label>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>WON</fullName><default>false</default><label>WON</label></value><value><fullName>LOST</fullName><default>false</default><label>LOST</label></value><value><fullName>DRAW</fullName><default>false</default><label>DRAW</label></value></valueSetDefinition></valueSet><trackTrending>false</trackTrending>
<type>Picklist</type>
</CustomField>