CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Overs_Bowled__c.field-meta.xml
<CustomField>
<fullName>Overs_Bowled__c</fullName>
<label>Overs Bowled</label>
<defaultValue>0</defaultValue>
<precision>5</precision>
<scale>1</scale>
<type>Number</type>
</CustomField>