CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Player__c.field-meta.xml
<CustomField>
<fullName>Player__c</fullName>
<description>Parent Player (Master-Detail)</description><label>Player</label>
<referenceTo>Player__c</referenceTo>
<relationshipLabel>Match Performances</relationshipLabel>
<relationshipName>Match_Performances</relationshipName>
<relationshipOrder>0</relationshipOrder>
<type>MasterDetail</type>
</CustomField>