CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Player_of_the_Match__c.field-meta.xml
<CustomField>
<fullName>Player_of_the_Match__c</fullName>
<label>Player of the Match</label>
<defaultValue>false</defaultValue>
<type>Checkbox</type>
</CustomField>