CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Recorded_By__c.field-meta.xml
<CustomField>
<fullName>Recorded_By__c</fullName>
<description>Lookup to the user who entered this record.</description><label>Recorded By</label>
<deleteConstraint>SetNull</deleteConstraint>
<referenceTo>User</referenceTo>
<relationshipLabel>Recorded Match Performances</relationshipLabel>
<relationshipName>Recorded_Match_Performances</relationshipName>
<type>Lookup</type>
</CustomField>