CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Runs_Conceded__c.field-meta.xml
<CustomField>
<fullName>Runs_Conceded__c</fullName>
<label>Runs Conceded</label>
<defaultValue>0</defaultValue>
<precision>18</precision>
<scale>0</scale>
<type>Number</type>
</CustomField>