CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Runs_Scored__c.field-meta.xml
<CustomField>
<fullName>Runs_Scored__c</fullName>
<label>Runs Scored</label>
<defaultValue>0</defaultValue>
<precision>18</precision>
<scale>0</scale>
<type>Number</type>
</CustomField>