CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Sixes__c.field-meta.xml
<CustomField>
<fullName>Sixes__c</fullName>
<label>Sixes</label>
<defaultValue>0</defaultValue>
<precision>18</precision>
<scale>0</scale>
<type>Number</type>
</CustomField>