CRICKSTATS/force-app/main/default/objects/Match_Performance__c/fields/Stumpings__c.field-meta.xml
<CustomField>
<fullName>Stumpings__c</fullName>
<label>Stumpings</label>
<defaultValue>0</defaultValue>
<precision>18</precision>
<scale>0</scale>
<type>Number</type>
</CustomField>