CRICKSTATS/force-app/main/default/objects/Match_Performance__c/validationRules/Boundaries_Valid.validationRule-meta.xml
<ValidationRule>
<fullName>Boundaries_Valid</fullName>
<active>true</active>
<description>Fours/Sixes must be 0 or more, and their runs cannot exceed Runs Scored or Balls Faced.</description>
<errorConditionFormula>OR(BLANKVALUE(Fours__c, 0) &lt; 0, BLANKVALUE(Sixes__c, 0) &lt; 0, (BLANKVALUE(Fours__c, 0) * 4 + BLANKVALUE(Sixes__c, 0) * 6) &gt; BLANKVALUE(Runs_Scored__c, 0), (BLANKVALUE(Fours__c, 0) + BLANKVALUE(Sixes__c, 0)) &gt; BLANKVALUE(Balls_Faced__c, 0))</errorConditionFormula>
<errorDisplayField>Fours__c</errorDisplayField>
<errorMessage>Fours/Sixes must be 0 or more, and their runs cannot exceed Runs Scored or Balls Faced.</errorMessage>
</ValidationRule>