CRICKSTATS/force-app/main/default/objects/Match_Performance__c/validationRules/Fielding_Not_Negative.validationRule-meta.xml
<ValidationRule>
<fullName>Fielding_Not_Negative</fullName>
<active>true</active>
<description>Stumpings and Catches cannot be negative.</description>
<errorConditionFormula>OR(BLANKVALUE(Stumpings__c, 0) &lt; 0, BLANKVALUE(Catches__c, 0) &lt; 0)</errorConditionFormula>
<errorDisplayField>Catches__c</errorDisplayField>
<errorMessage>Stumpings and Catches cannot be negative.</errorMessage>
</ValidationRule>