CRICKSTATS/force-app/main/default/objects/Match_Performance__c/validationRules/Maiden_Overs_Valid.validationRule-meta.xml
<ValidationRule>
<fullName>Maiden_Overs_Valid</fullName>
<active>true</active>
<description>Maiden Overs must be 0 or more and cannot exceed the completed overs bowled.</description>
<errorConditionFormula>OR(BLANKVALUE(Maiden_Overs__c, 0) &lt; 0, BLANKVALUE(Maiden_Overs__c, 0) &gt; FLOOR(BLANKVALUE(Overs_Bowled__c, 0)))</errorConditionFormula>
<errorDisplayField>Maiden_Overs__c</errorDisplayField>
<errorMessage>Maiden Overs must be 0 or more and cannot exceed the completed overs bowled.</errorMessage>
</ValidationRule>