CRICKSTATS/force-app/main/default/objects/Match_Performance__c/validationRules/Match_Result_Required.validationRule-meta.xml
<ValidationRule>
<fullName>Match_Result_Required</fullName>
<active>true</active>
<description>Please select a Match Result (WON, LOST or DRAW).</description>
<errorConditionFormula>ISBLANK(TEXT(Match_Result__c))</errorConditionFormula>
<errorDisplayField>Match_Result__c</errorDisplayField>
<errorMessage>Please select a Match Result (WON, LOST or DRAW).</errorMessage>
</ValidationRule>