CRICKSTATS/force-app/main/default/objects/Match_Performance__c/validationRules/Overs_Valid.validationRule-meta.xml
<ValidationRule>
<fullName>Overs_Valid</fullName>
<active>true</active>
<description>Overs Bowled must be between 0 and 100, and balls after the decimal must be 0 to 5 (e.g. 4.3).</description>
<errorConditionFormula>OR(BLANKVALUE(Overs_Bowled__c, 0) &lt; 0, BLANKVALUE(Overs_Bowled__c, 0) &gt; 100, MOD(ROUND(BLANKVALUE(Overs_Bowled__c, 0) * 10, 0), 10) &gt; 5)</errorConditionFormula>
<errorDisplayField>Overs_Bowled__c</errorDisplayField>
<errorMessage>Overs Bowled must be between 0 and 100, and balls after the decimal must be 0 to 5 (e.g. 4.3).</errorMessage>
</ValidationRule>