CRICKSTATS/force-app/main/default/objects/Match_Performance__c/validationRules/Runs_Conceded_Valid.validationRule-meta.xml
<ValidationRule>
<fullName>Runs_Conceded_Valid</fullName>
<active>true</active>
<description>Runs Conceded cannot be negative.</description>
<errorConditionFormula>BLANKVALUE(Runs_Conceded__c, 0) &lt; 0</errorConditionFormula>
<errorDisplayField>Runs_Conceded__c</errorDisplayField>
<errorMessage>Runs Conceded cannot be negative.</errorMessage>
</ValidationRule>