CRICKSTATS/force-app/main/default/objects/Match_Performance__c/validationRules/Runs_Not_Negative.validationRule-meta.xml
<ValidationRule>
<fullName>Runs_Not_Negative</fullName>
<active>true</active>
<description>Runs Scored cannot be negative.</description>
<errorConditionFormula>BLANKVALUE(Runs_Scored__c, 0) &lt; 0</errorConditionFormula>
<errorDisplayField>Runs_Scored__c</errorDisplayField>
<errorMessage>Runs Scored cannot be negative.</errorMessage>
</ValidationRule>